--- a/trangchu12b1.html
+++ b/trangchu12b1.html
@@ -172,72 +172,72 @@
                         <tr>
                             <td>1</td>
                             <td>Trần Thanh Bình</td>
-                            <td>Lớp phó lao động</td>
+                            <td>Lớp phó vệ sinh </td>
                         </tr>
                         <tr>
                             <td>2</td>
                             <td>Phan Đức Thành Danh</td>
-                            <td></td>
+                            <td> sói cô độc </td>
                         </tr>
                         <tr>
                             <td>3</td>
                             <td>Trần Nguyễn Tiến Đạt</td>
-                            <td></td>
+                            <td>Tổng tài</td>
                         </tr>
                         <tr>
                             <td>4</td>
                             <td>Trần Văn Duy</td>
-                            <td>Lớp trưởng </td>
+                            <td>Lốp trưởng </td>
                         </tr>
                         <tr>
                             <td>5</td>
                             <td>Phan Thành Long Giang</td>
-                            <td>Lớp phó học tập</td>
+                            <td>Lớp phó đầu bài</td>
                         </tr>
                         <tr>
                             <td>6</td>
                             <td>Phan Trung Hiếu</td>
-                            <td></td>
+                            <td>culi xuyên lục địa</td>
                         </tr>
                         <tr>
                             <td>7</td>
                             <td>Võ Đức Hoàng</td>
-                            <td>Lớp phó văn thể mĩ</td>
+                            <td>Lớp phó nhảy múa </td>
                         </tr>
                         <tr>
                             <td>8</td>
                             <td>Nguyễn Ngọc Huy</td>
-                            <td></td>
+                            <td>Luật sư</td>
                         </tr>
                         <tr>
                             <td>9</td>
                             <td>Dương Tấn Đăng khoa</td>
-                            <td></td>
+                            <td>Chúa hề</td>
                         </tr>
                         <tr>
                             <td>10</td>
                             <td>Nguyễn Việt Kiều</td>
-                            <td></td>
+                            <td>Bà tám</td>
                         </tr>
                         <tr>
                             <td>11</td>
                             <td>Lê Hoàng Linh Ny</td>
-                            <td></td>
+                            <td>Dài phát thanh</td>
                         </tr>
                         <tr>
                             <td>12</td>
                             <td>Nguyễn Duy Phong</td>
-                            <td></td>
+                            <td>Thương binh</td>
                         </tr>
                         <tr>
                             <td>13</td>
                             <td>Huỳnh Phan Hoàng Thành</td>
-                            <td></td>
+                            <td>Họa sĩ </td>
                         </tr>
                         <tr>
                             <td>14</td>
                             <td>Trần Cao Thứ</td>
-                            <td></td>
+                            <td>HKT</td>
                         </tr>
                         <tr>
                             <td>15</td>
@@ -247,17 +247,17 @@
                         <tr>
                             <td>16</td>
                             <td>Đào Thành Tín</td>
-                            <td></td>
+                            <td>Bảo vệ</td>
                         </tr>
                         <tr>
                             <td>17</td>
                             <td>Dương Thị Mỹ Trinh</td>
-                            <td></td>
+                            <td> Mẹ của cả lớp</td>
                         </tr>
                         <tr>
                             <td>18</td>
                             <td>Lê Công Tuấn Tú</td>
-                            <td></td>
+                            <td> IDOL top top</td>
                         </tr>
                 </tbody>
             </table>
