--- a/trangchu12b1.html
+++ b/trangchu12b1.html
@@ -262,6 +262,50 @@
                 </tbody>
             </table>
         </section>
+        <section id="thanh-vien-vk">
+                <h2>Các bạn đi trao đổi vs Ameria</h2>
+                <table border="2">
+                    <thead>
+                        <tr>
+                            <th>STT</th>
+                            <th>Tên</th>
+                            <th>Chức vụ</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>Hiêp Nguyễn</td>
+                            <td>Calicon</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>Nhàn Phan</td>
+                            <td>Chị đại</td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>Trần Nguyễn Tiến Đạt</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>4</td>
+                            <td>Kim Liên(rachel)</td>
+                            <td>Điệp viên mét rưỡi</td>
+                        </tr>
+                        <tr>
+                            <td>5</td>
+                            <td>Xuân Thịnh</td>
+                            <td>Vua phá lưới</td>
+                        </tr>
+                        <tr>
+                            <td>6</td>
+                            <td>Nguyên Lê</td>
+                            <td>Người vô hình</td>
+                        </tr>
+                    </tbody>
+                </table>
+        </section>
 
         <section id="hoat-dong">
             <h2>Hoạt Động Nổi Bật</h2>
