--- a/trangchu12b1.html
+++ b/trangchu12b1.html
@@ -285,23 +285,18 @@
                         </tr>
                         <tr>
                             <td>3</td>
-                            <td>Trần Nguyễn Tiến Đạt</td>
-                            <td></td>
+                            <td>Kim Liên(Rachel)</td>
+                            <td>Nấm lùn</td>
                         </tr>
                         <tr>
                             <td>4</td>
-                            <td>Kim Liên(rachel)</td>
-                            <td>Điệp viên mét rưỡi</td>
-                        </tr>
-                        <tr>
-                            <td>5</td>
                             <td>Xuân Thịnh</td>
                             <td>Vua phá lưới</td>
                         </tr>
                         <tr>
-                            <td>6</td>
+                            <td>5</td>
                             <td>Nguyên Lê</td>
-                            <td>Người vô hình</td>
+                            <td>Thợ lặn</td>
                         </tr>
                     </tbody>
                 </table>
