--- a/trangchu12b1.html
+++ b/trangchu12b1.html
@@ -242,7 +242,7 @@
                         <tr>
                             <td>15</td>
                             <td>Trần Thị Hoài Thương</td>
-                            <td>Thủ quỷ</td>
+                            <td>Đòi nợ thuê </td></td>
                         </tr>
                         <tr>
                             <td>16</td>
@@ -257,7 +257,7 @@
                         <tr>
                             <td>18</td>
                             <td>Lê Công Tuấn Tú</td>
-                            <td> IDOL top top</td>
+                            <td> Thầy bói</td>
                         </tr>
                 </tbody>
             </table>
