--- a/thongbao.html
+++ b/thongbao.html
@@ -26,7 +26,8 @@
 <body>
     <div class="container">
         <h1>Thông Báo Mới Nhất</h1>
-        <p>Các bạn nộp bài tin trước 8h ngày 17 tháng 2.</p>
+        <p>Đã tốt nghiệp 23/23</p>
     </div>
 </body>
 </html>
+
